# vibe-engine

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.claude/skills/diagnose/: SKILL.md
.claude/skills/to-issues/: SKILL.md
.claude/skills/vx-dependency-check/: SKILL.md
.claude/skills/vx-doc-graph/: SKILL.md
.claude/skills/vx-git-flow/: SKILL.md
.claude/skills/vx-hardening-guard/: SKILL.md
.claude/skills/vx-naming-style/: SKILL.md
.claude/skills/vx-phase-analyze/: SKILL.md
.claude/skills/vx-spec-animation/: SKILL.md
.claude/skills/vx-spec-architecture/: SKILL.md
.claude/skills/vx-spec-audio/: SKILL.md
.claude/skills/vx-spec-gameplay/: SKILL.md
.claude/skills/vx-spec-memory-perf/: SKILL.md
.claude/skills/vx-spec-physics/: SKILL.md
.claude/skills/vx-spec-rendering/: SKILL.md
.claude/skills/vx-spec-shaders/: SKILL.md
.claude/skills/vx-spec-testing/: SKILL.md
.claude/skills/vx-spec-tools/: SKILL.md
.claude/skills/vx-spec-ui-ux/: SKILL.md
.claude/skills/vx-spec-workflow/: SKILL.md
.claude/skills/vx-task-create/: SKILL.md
.claude/skills/vx-task-execute/: SKILL.md
Docs/: design-mvp.md
Docs/Context/: GLOSSARY.md
Docs/Decisions/: 0001-tipos-fundamentais-core.md  0002-jobsystem-worker-pool.md  0003-allocators-e-diagnostico.md  0004-tracy-na-fase-1.md  0005-infra-de-testes.md  0006-bootstrap-centralizado.md  0007-hw-minimo-execucao.md  0008-tooling-build-conventions.md  0009-vassert-test-handler-e-stringid-seed.md  0010-rmlui-hud-do-jogo.md  0011-metas-de-performance.md  0012-enginecore-modulo-layout.md  0013-formato-task-v2.md  0014-convencao-include-paths.md  0015-cmake-build-type-por-preset.md  0016-test-sources-glob.md  0017-math-module-conventions.md  0018-jobsystem-api-ciclo-de-vida.md  0019-testes-concorrencia-perf-jobsystem.md  0020-filesystem-leitura-e-watcher.md  0021-enginecore-bootstrap-decisoes.md
Docs/Hardening/: HARDENING.md
Docs/References/: MATT-SKILLS-BINDING.md  VIBE-CODING-WORKFLOW.md
Docs/Roadmap/: README.md
Docs/Roadmap/Phases/: Fase-01-foundation.md
Docs/Roadmap/Tasks/: 01-cmake-vcpkg-presets.md  02-core-types-handles-result.md  03-core-logging-time-profile.md  04-math-wrappers-glm.md  05-memory-tag-allocators.md  06-memory-frame-tracking.md  07-platform-windows-base.md  08-platform-windows-application.md  09-jobsystem-worker-queue.md  10-jobsystem-graph-parallelfor.md  11-filesystem-sync-path.md  12-filesystem-async-watcher.md  13-engine-core-bootstrap.md  14-vibetests-exe-smoke-fase1.md
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Private/: AssertImpl.cpp  LoggingSink.cpp  StringIdTable.cpp  TimeImpl.cpp
Engine/Source/Runtime/Core/Public/Core/: Assert.h  Handle.h  Logging.h  Profile.h  Result.h  StringId.h  Time.h  Types.h
Engine/Source/Runtime/Core/Tests/: Core_Assert.cpp  Core_Handle.cpp  Core_Logging.cpp  Core_Result.cpp  Core_Smoke.cpp  Core_StringId.cpp  Core_Time.cpp  Core_Types.cpp
Engine/Source/Tests/: CMakeLists.txt
Scripts/: run-tests.ps1
